# spvn

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  book.toml  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  test.ipynb
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: CI.yml  check-and-lint.yml  docs.yml  mdbook.yml  release.yml
crates/spvn/: Cargo.toml  README.md
crates/spvn/src/: lib.rs  spvn.rs  startup.rs
crates/spvn/src/handlers/: http.rs  logging.rs  mod.rs  tasks.rs
crates/spvn/src/startup/: listen.rs  message.rs  mod.rs  tls.rs
crates/spvn_caller/: Cargo.toml  README.md
crates/spvn_caller/src/: lib.rs
crates/spvn_caller/src/service/: caller.rs  imports.rs  lifespan.rs  mod.rs
crates/spvn_cfg/: Cargo.toml
crates/spvn_cfg/src/: lib.rs
crates/spvn_cli/: Cargo.toml  build.rs
crates/spvn_cli/src/: args.rs  lib.rs
crates/spvn_cli/src/commands/: mod.rs  serve.rs
crates/spvn_dev/: Cargo.toml
crates/spvn_dev/src/: lib.rs
crates/spvn_lifespan/: Cargo.toml  README.md
crates/spvn_lifespan/src/: lib.rs
crates/spvn_listen/: Cargo.toml  README.md
crates/spvn_listen/src/: lib.rs
crates/spvn_log/: Cargo.toml
crates/spvn_log/src/: lib.rs
crates/spvn_macros/: Cargo.toml
crates/spvn_macros/src/: lib.rs
crates/spvn_py/: Cargo.toml
crates/spvn_py/src/: lib.rs
crates/spvn_serde/: Cargo.toml
crates/spvn_serde/src/: asgi_scope.rs  asgi_sender.rs  body_receiver.rs  call_async.rs  coalesced.rs  event_receiver.rs  event_sender.rs  implementation.rs  lib.rs  receiver.rs  sender.rs  state.rs
docs/: Configuration.md  INTRO.md  SUMMARY.md
docs/ali/: README.md
dotest/: bar.py  baz.py  bit.py  foo.py
examples/dynamic-import/: Cargo.toml
examples/dynamic-import/pylib/: foo.py
examples/dynamic-import/src/: main.rs
perf/: bootstrap-base-call-pooler.md  bootstrap-base-call-serialize-pyo3cls.md  bootstrap-base-call-serialize-receiver-async.md  bootstrap-base-call-serialize-receiver-sync.md  bootstrap-base-call-serialize-receiver.md  bootstrap-base-call-serialize-sender-async.md  bootstrap.md  go.mod  perf_test.go
perf/ali/: README.md
perf/custom/: bootstrap-base-call-all-refactored.md  bootstrap-base-call-serialize-asgi-dict.md  bootstrap-base-call-serialize-asgi.md  bootstrap-base-call-serialize-pyo3cls-send.md  bootstrap-base-call.md  hypercorn.md  perf_test.go  run.sh  uvicorn.md
python/spvn/: __init__.py  __main__.py
src/spvn/: __init__.py  __main__.py  types.py
test/: foo.py
