[workspace]
members = ["crates/*"]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
authors = ["Joshua A. <joshua.auchincloss@proton.me>"]
homepage = "https://github.com/joshua-auchincloss/spvn"
documentation = "https://github.com/joshua-auchincloss/spvn"
repository = "https://github.com/joshua-auchincloss/spvn"

[workspace.dependencies]
pyo3 = {version = "0.18.3", features = ["auto-initialize", "extension-module"]}
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }

serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.9", features = ["sync"]}
async-trait = {version = "0.1.68"}
simple_logger = "4.1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
anyhow = { version = "1.0.71" }
