[workspace]
members = ["crates/*"]


[workspace.package]
version = "0.1.1-beta.1"
edition = "2021"
rust-version = "1.69.0"
authors = ["Joshua A. <joshua.auchincloss@proton.me>"]
homepage = "https://spvn-rs.github.io/spvn/"
documentation = "https://github.com/spvn-rs/spvn"
repository = "https://github.com/spvn-rs/spvn"
description = "asgi rust bindings"


[workspace.dependencies]
ahash = { version = "0.8.3" }
tracing-core = { version = "0.1.31" }
bytes = "1"
bytes-expand = "0.4.12"
futures = { version = "0.3.28" }
crossbeam = "0.8"
deadpool = "0.9.5"
socket2 = { version = "0.5.3" , features = ["all"]}
tracing = "0.1"
tracing-subscriber = "0.3"
pyo3 = { version = "0.19.0" }
colored = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.9", features = ["sync", "rt"]}
async-trait = {version = "0.1.68"}
simple_logger = "4.1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = { version = "1.0.71" }
axum = { version = "0.6.18"}
axum-core = { version = "0.3.4"}
toml = { version = "0.7.4" }
libc = { version = "0.2.146" }
http = { version = "0.2.9" }
once_cell = { version = "1.18.0" }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["make"] }

[profile.release]
lto = "fat"

[profile.dev]
rpath = true
