[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "spvn"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
spvn = "spvn:main"

[tool.maturin]
python-source = "python"
bindings = "bin"
manifest-path = "crates/spvn_cli/Cargo.toml"
module-name = "spvn"
strip = true
exclude = [

]