[package]
name = "spvn"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[lib]
name = "spvn"
crate-type = ["rlib"]


[dependencies]

spvn_listen = {path = "../spvn_listen"}
spvn_caller = {path = "../spvn_caller"}
spvn_serde = {path = "../spvn_serde"}
spvn_cfg = {path = "../spvn_cfg"}


ahash = { workspace = true, features = ["std"] }
bytes = { workspace = true }
deadpool = { workspace = true }
bytes-expand = { workspace = true }
colored = { workspace = true }
crossbeam = {workspace = true}


anyhow = {workspace = true}
tokio-rustls = "0.23"
tokio-util = "0.7.8"
tokio-stream = { version = "0.1.14", features = ["net"] }
async-trait = {workspace = true}
log = { workspace = true }
pyo3 = {workspace = true, features = []}

http-body = { version = "0.4.5" }
tokio = { workspace = true, features = ["sync", "macros"] }
hyper = { workspace = true, features = ["full"] }
http = { workspace = true }
futures = { workspace = true }
tower = {workspace = true, features = ["make", "timeout"]}
tower-layer = { version = "0.3.2" }
tower-service = { version = "0.3.2" }
socket2 = { workspace = true , features = ["all"]}
