[package]
name = "spvn"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[features]
lifespan = []

[lib]
name = "spvn"
crate-type = ["rlib"]

[dependencies]
spvn_dev = {path = "../spvn_dev"}
spvn_caller = {path = "../spvn_caller"}
spvn_serde = {path = "../spvn_serde"}

tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
ahash = { workspace = true, features = ["std"] }
bytes = { workspace = true }
deadpool = { workspace = true }
bytes-expand = { workspace = true }
colored = { workspace = true }
crossbeam = {workspace = true}

rustls-pemfile = "1.0"
anyhow = {workspace = true}
tokio-rustls = "0.24"
tokio-util = "0.7.8"
tokio-stream = { version = "0.1.14", features = ["net"] }
async-trait = {workspace = true}
pyo3 = {workspace = true, features = ["abi3"]}

http-body = { version = "0.4.5" }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
hyper = { workspace = true, features = ["full"] }
http = { workspace = true }
futures = { workspace = true }
tower = {workspace = true, features = ["make", "timeout"]}
tower-layer = { version = "0.3.2" }
tower-service = { version = "0.3.2" }
socket2 = { workspace = true , features = ["all"]}
