[package]
name = "spvn_caller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[lib]

[dependencies]
spvn_cfg = { path = "../spvn_cfg" }
spvn_serde = { path = "../spvn_serde" }
syncpool = { version = "0.1.6" }
async-trait = { workspace = true}
tokio = { workspace = true }
libc = { workspace = true }
cpython = { workspace = true, features = ["python3-sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true}



bytes = "1"

