[package]
name = "spvn_caller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[lib]

[dependencies]

pyo3 = {workspace = true, features = []}
futures = {workspace = true, features = []}
crossbeam = {workspace = true}

deadpool = { workspace = true }

spvn_serde = { path = "../spvn_serde" }
spvn_dev = { path = "../spvn_dev" }

syncpool = { version = "0.1.6" }
async-trait = { workspace = true}
tokio = { workspace = true }
libc = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = { workspace = true }
tracing = { workspace = true }
colored = { workspace = true}



bytes = {workspace = true}
crossbeam-utils = "0.8.15"


