[package]
name = "spvn_cfg"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]

[dependencies]
spvn = { path = "../spvn" }
simple_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { version = "0.7.4" }
serde = { workspace = true }