[package]
name = "spvn_cfg"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]

[dependencies]
bytes = {workspace = true}
spvn_serde = { path =  "../spvn_serde" }
log = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
cpython = { workspace = true, features = ["serde-convert"] }
axum = { workspace = true, features = [] }
axum-core = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tracing = "0.1"
async-trait = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
tower = { version = "0.4", features = ["make"] }
tokio-rustls = "0.23"
rustls-pemfile = "0.3"