[package]
name = "spvn_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = "../../README.md"
license = "MIT"

[[bin]]
name = "spvn"
doc = false

[dependencies]
spvn = { path = "../spvn" }
simple_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }