[package]
name = "spvn_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = "../../README.md"
license = "MIT"

[[bin]]
name = "spvn"
doc = false

[dependencies]
spvn = { path = "../spvn" }
spvn_cfg = { path = "../spvn_cfg" }
spvn_caller = { path = "../spvn_caller"  }
spvn_serde = { path = "../spvn_serde"  }
spvn_listen = { path = "../spvn_listen" }


simple_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"]}
colored = { workspace = true}
notify = { version = "6.0.0" }
tokio-rustls = "0.23"
pyo3 = {workspace = true, features = []}
