[package]
name = "spvn_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = "../../README.md"
license = "MIT"

[[bin]]
name = "spvn"
doc = false

[dependencies]
spvn = { path = "../spvn", features = ["lifespan"] }
spvn_caller = { path = "../spvn_caller"  }
spvn_serde = { path = "../spvn_serde"  }


num_cpus = "1.0"
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"]}
colored = { workspace = true}
notify = { version = "6.1.0" }
tokio-rustls = "0.24"
pyo3 = {workspace = true, features = ["abi3"]}

[build-dependencies]
pyo3-build-config = "0.19.0"
