[package]
name = "spvn_lifespan"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]

[dependencies]
pythonize = { version = "0.18.0" }
async-trait = {version = "0.1.68"}

pyo3 = { workspace = true , features = ["extension-module"]}
pyo3-asyncio = { workspace = true , features = ["attributes", "tokio-runtime"] }

serde = { workspace = true , features = ["derive"] }
tokio = { workspace = true , features = ["sync"]}
simple_logger = { workspace = true }
log = { workspace = true }