[package]
name = "spvn_lifespan"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[lib]

[dependencies]
async-trait = { workspace = true}
serde = { workspace = true , features = ["derive"] }
tokio = { workspace = true , features = ["sync"]}
simple_logger = { workspace = true }
log = { workspace = true, features = ["max_level_error"] }
