[package]
name = "spvn_listen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license = "MIT"

[lib]

[dependencies]
tokio = { workspace = true, features = ["net", "sync"]}
anyhow = { workspace = true }
hyper = { workspace = true, features = ["full"] }
parking_lot = "0.12.1"
tower = { workspace = true, features = ["make"] }
axum = { workspace = true, features = [] }
axum-core = { workspace = true }