[package]
name = "spvn_macros"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["proc-macro"]

[dependencies]
simple_logger = { workspace = true }
log = { workspace = true }
colored = { workspace = true }
syn = "1.0"
quote = "1.0"
pyo3 = {workspace = true}
