[package]
name = "spvn_py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true , features = ["generate-import-lib"] }
pyo3-asyncio = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = { version = "0.18.0" }
tokio = {version = "1.9", features = ["sync"]}
async-trait = {version = "0.1.68"}
simple_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
