[package]
name = "spvn_py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = {workspace = true}
spvn_cfg = {path = "../spvn_cfg"}
pyo3 = { workspace = true , features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = { version = "0.18.0" }
tokio = {version = "1.9", features = ["sync"]}
async-trait = { workspace = true}
simple_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
