[package]
name = "spvn_serde"
version = { workspace = true }
publish = false
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

#

[dependencies]
http = { workspace = true }
colored = { workspace = true }
ahash = { workspace = true }
hyper = { workspace = true, features = ["full"] }

tracing = { workspace = true }

bytes = { workspace = true }
bytes-expand = { workspace = true }
pyo3 = {workspace = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = {workspace = true}
futures = {workspace = true}
tokio = {workspace = true}
crossbeam = {workspace = true}
spvn_macros = {path = "../spvn_macros"}